# topgrade

./: .editorconfig  .travis.yml  Cargo.toml  MustBeRanBeforeUsing.sh  MustBeRanBeforeUsingIfOnLinux.sh  MustBeRanBeforeUsingIfOnLinux.sh.sh  README.md  SECURITY.md  TopgradeTime  appveyor.yml  azure-pipelines.yml  config.example.toml  topgrade  topgrade.8
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  release-cross.yml  release.yml  rust-ubuntu.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
doc/: topgrade.afdesign
src/: config.rs  emacs.el  error.rs  execution_context.rs  executor.rs  freebsd.rs  generic.rs  git.rs  linux.rs  macos.rs  main.rs  node.rs  npm.rs  report.rs  runner.rs  self_renamer.rs  self_update.rs  steps.rs  terminal.rs  tmux.rs  unix.rs  utils.rs  vim.rs  windows.rs
src/ctrlc/: interrupted.rs  mod.rs  unix.rs  windows.rs
src/steps/: containers.rs  emacs.el  emacs.rs  generic.rs  git.rs  kakoune.rs  mod.rs  node.rs  powershell.rs  tmux.rs  toolbx.rs  upgrade.kak  upgrade.vim  vagrant.rs  vim.rs  zsh.rs
src/steps/os/: .unix.rs.swp  android.rs  archlinux.rs  dragonfly.rs  freebsd.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
src/steps/os/os_release/: amazon_linux  anarchy  antergos  arch  arch32  artix  clearlinux  fedora  fedoraremixforwsl  garuda  manjaro  manjaro-arm  mint  nixos  opensuse  oracle  pengwinonwsl  pureos  ubuntu
src/steps/remote/: mod.rs  ssh.rs  vagrant.rs
