[package]
name = "topgrade"
description = "Upgrade all the things"
categories = ["os"]
keywords = ["upgrade", "update"]
license-file = "LICENSE"
repository = "https://github.com/r-darwish/topgrade"
version = "7.1.0"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]
exclude = ["doc/screenshot.gif"]
edition = "2018"
readme = "README.md"

[dependencies]
directories = "3.0.2"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
which_crate = { version = "4.1.0", package = "which" }
shellexpand = "2.1.0"
structopt = "0.3.21"
log = "0.4.14"
walkdir = "2.3.2"
console = "0.14.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
pretty_env_logger = "0.4.0"
glob = "0.3.0"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"
anyhow = "1.0.40"
tempfile = "3.2.0"
cfg-if = "1.0.0"
tokio = { version = "1.5.0", features = ["process", "rt-multi-thread"] }
futures = "0.3.14"
regex = "1.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "4.5.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"
self_update_crate = { version = "0.26.0", optional = true, package = "self_update", features = ["archive-tar", "compression-flate2"] }

[target.'cfg(windows)'.dependencies]
self_update_crate = { version = "0.26.0", optional = true, package = "self_update", features = ["archive-zip", "compression-zip-deflate"] }
winapi = "0.3.9"
parselnk = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.17.0"
openssl-probe = { version = "0.1.2", optional = true }

[profile.release]
lto = true

[features]
default = []

self-update = ["self_update_crate", "openssl-probe"]
